<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/world_cinema"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/light_gray_edittext"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/light_gray_edittext"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/light_gray_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/light_gray_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/light_gray_edittext"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/blue_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/stroke_button"
                android:text="@string/already_have_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>